GCP_personal_project/bts-web-source-code/k8s/services/bts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bts-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "bts-ingress"
spec:
  rules:
  - http:
      paths:
      - path: /review/.*
        pathType: Prefix
        backend:
          service:
            name: bts-review-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bts-web-service
            port:
              number: 80
